// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component - TaskCheckbox renders correctly when task is COMPLETED 1`] = `
Array [
  " ",
  <Box
    className="makeStyles-wrapper-1"
  >
    <Checkbox
      aria-label="primary checkbox"
      checked={true}
      color="primary"
      onChange={[Function]}
      value="1"
    />
    <Box
      className="makeStyles-titleWrapper-2"
    >
      <Typography
        component="h4"
        variant="body1"
      >
        <a
          href="/buddy/newbies/undefined/tasks/1"
          onClick={[Function]}
        >
          <Box
            className="makeStyles-linkText-4"
            fontWeight="fontWeightRegular"
          >
            Change you line manager
          </Box>
        </a>
        <div
          className="makeStyles-line-3"
        />
      </Typography>
    </Box>
  </Box>,
]
`;

exports[`Component - TaskCheckbox renders correctly when task is UNCOMPLETED 1`] = `
<Box
  className="makeStyles-wrapper-1"
>
  <Checkbox
    aria-label="primary checkbox"
    checked={false}
    color="primary"
    onChange={[Function]}
    value="1"
  />
  <Box
    className="makeStyles-titleWrapper-2"
  >
    <Typography
      component="h4"
      variant="body1"
    >
      <a
        href="/buddy/newbies/undefined/tasks/1"
        onClick={[Function]}
      >
        <Box
          className="makeStyles-linkText-4"
          fontWeight="fontWeightBold"
        >
          Change you line manager
        </Box>
      </a>
    </Typography>
  </Box>
</Box>
`;
